--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,10 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
 }
 
 dependencies {
@@ -51,4 +55,6 @@ dependencies {
     implementation 'com.google.android.exoplayer:exoplayer-core:2.10.1'
     implementation 'com.google.android.exoplayer:exoplayer-dash:2.10.1'
     implementation 'com.google.android.exoplayer:exoplayer-ui:2.10.1'
+
+    implementation 'androidx.viewpager2:viewpager2:1.0.0-alpha04'
 }
