--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,10 @@
 
 buildscript {
     ext.kotlin_version = '1.3.31'
-    ext.kodein_version = '5.2.0'
-    ext.lifecycle_version = '2.2.0-alpha01'
     ext.kotlin_version = '1.3.31'
+    ext.kodein_version = '5.2.0'
+    ext.retrofit_version = '2.5.0'
+    ext.lifecycle_version = '2.2.0-alpha01'
     repositories {
         google()
         jcenter()
