--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,21 +39,23 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0-alpha05'
-    implementation "com.google.android.material:material:1.1.0-alpha06"
-    implementation 'androidx.core:core-ktx:1.2.0-alpha01'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta1'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.1.1'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.1'
-    implementation "org.jetbrains.kotlin:kotlin-reflect:1.3.31"
+    implementation 'androidx.appcompat:appcompat:1.1.0-rc01'
+    implementation "com.google.android.material:material:1.1.0-alpha09"
+    implementation 'androidx.core:core-ktx:1.2.0-alpha02'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta2'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.2.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.2.1'
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.3.41"
 
     //ExoPlayer
     implementation 'com.google.android.exoplayer:exoplayer-core:2.10.1'
     implementation 'com.google.android.exoplayer:exoplayer-dash:2.10.1'
     implementation 'com.google.android.exoplayer:exoplayer-ui:2.10.1'
+    implementation 'com.google.android.exoplayer:extension-rtmp:2.10.1'
+
 
     implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha05'
-    implementation 'androidx.viewpager2:viewpager2:1.0.0-alpha04'
+    implementation 'androidx.viewpager2:viewpager2:1.0.0-beta03'
     implementation 'org.jsoup:jsoup:1.12.1'
 
     //ViewModel & LiveData
@@ -71,7 +73,5 @@ dependencies {
     // Kodein
     implementation "org.kodein.di:kodein-di-generic-jvm:$kodein_version"
     implementation "org.kodein.di:kodein-di-framework-android-x:$kodein_version"
-
-    implementation 'com.squareup.leakcanary:leakcanary-android:2.0-alpha-2'
 
 }
