--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
 
     <application
             android:allowBackup="true"
+            android:usesCleartextTraffic="true"
             android:name=".LivestreamingApplication"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
